--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -16,7 +16,7 @@
     <h4>FoodNow</h4>
 
     <section class="checkout">
-        <h2>Place Order</h2>
+        <h2>Place Order now</h2>
 
         <form id="send-order" method="POST" action="/orders">
           <textarea  class="order-input"name="text" placeholder="What would you like to order?"></textarea>
