--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -14,11 +13,7 @@
   </head>
 
   <body>
-    <nav id="nav-bar">
-        <img class="logo" src="/images/restaurant.hpg" >
-        <span class="header">FoodNow</span>
-        <span class="header">Address</span>
-    </nav>
+  <% include partials/nav %>
 
     <section class="menu-container">    
         <article class="menu">
