--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,19 +16,153 @@
   <% include partials/nav %>
 
     <section class="menu-container">    
-        <article class="menu">
-          <header>
-            <h3>Menu</h3>
-          </header>
-          <p class="menu-body">Click on each item to add to cart</p>
-          <p class="menu-body">Dish Name</p>
-          <p class="menu-body">Dish Description</p>
-          <p class="menu-body">Dish Price</p>
-          <footer>
-            <span class="order_time">minutes ago</span>
-          </footer>
-        
-        </article>
+        <div class="menu-body">
+          <!-- Section starts: Main Course -->
+          <div class="menu-section">
+            <h2 class="menu-section-title">MAIN COURSE</h2>
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dish 1
+              </div>
+              <div class="menu-item-price">
+                $100
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION OF ITEM
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dish 2
+              </div>
+              <div class="menu-item-price">
+                $100
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION OF ITEM
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dish 3
+              </div>
+              <div class="menu-item-price">
+                $100
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION OF ITEM
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dish 4 
+              </div>
+              <div class="menu-item-price">
+                $100
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION OF ITEM
+              </div>
+            </div>
+            <!-- Item ends -->
+          </div>
+          <!-- Section ends: Main Course -->
+          <!-- Section starts: Drinks -->
+          <div class="menu-section">
+            <h2 class="menu-section-title">DRINKS</h2>
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Drink 1
+              </div>
+              <div class="menu-item-price">
+                $10
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Drink 2
+              </div>
+              <div class="menu-item-price">
+                $10
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Drink 3 
+              </div>
+              <div class="menu-item-price">
+                $10
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Drink 4 
+              </div>
+              <div class="menu-item-price">
+                $10
+              </div>
+            </div>
+            <!-- Item ends -->
+          </div>
+          <!-- Section ends: Drinks -->
+        </div>
+        <div class="menu-body">
+          <!-- Section starts: Appetizers -->
+          <div class="menu-section">
+            <h2 class="menu-section-title">DESSERT</h2>
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dessert 1 
+              </div>
+              <div class="menu-item-price">
+                $20
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION DESSERT 1 
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dessert 2
+              </div>
+              <div class="menu-item-price">
+                $20
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION DESSERT 2 
+              </div>
+            </div>
+            <!-- Item ends -->
+            <!-- Item starts -->
+            <div class="menu-item">
+              <div class="menu-item-name">
+                Dessert 3 
+              </div>
+              <div class="menu-item-price">
+                $20
+              </div>
+              <div class="menu-item-description">
+                DESCRIPTION DESSERT 3 
+              </div>
+            </div>
+            <!-- Item ends -->
 
     </section>
 
