--- a/views/neworder.ejs
+++ b/views/neworder.ejs
@@ -12,16 +12,54 @@
   </head>
 
   <body>
+      <nav id="nav-bar">
+        
+          <img class="logo"
+              src="https://www.mycutegraphics.com/graphics/cupcake/black-white-boy-with-cupcake.html">
+          <span class="header">FoodNow</span>
+      
+          <form id="main_pg_button" method="GET" action="/index">
+            <button id="nav-button" type="button">Home page!
+                <p id="burger-emoji">🍔</p>
+            </button>
+          </form>
+
+          <form id="send-tweets" method="POST" action="/checkout">
+              <button id="nav-button" type="button">Checkout!
+                  <p id="burger-emoji">🍔</p>
+              </button>
+          </form>
+      
+      </nav>
+
+      <div><img src="restaurant.jpg" alt="Restaurant_pic" width="500" height="600"></div>
+    
       <section class="new-order">
 
-          <h2>Place Order</h2>
+          <div class="summary_container">
+                  <h2>Summary</h2>
+                  <form id="options" method="POST" action="/checkout">
+                    <span id="charNum" class="counter"> 1 x Option A $</span>
+                    <input id="add-item" type="submit" value="+">
+                    <input id="remove-item" type="submit" value="+">
+                    <span id="charNum" class="counter"> 1 x Option A $</span>
+                    <input id="add-item" type="submit" value="+">
+                    <input id="remove-item" type="submit" value="+">
+                    <span id="charNum" class="counter"> 1 x Option A $</span>
+                    <input id="add-item" type="submit" value="+">
+                    <input id="remove-item" type="submit" value="+">
+                  </form>
+            </div>
 
-          <form id="send-order" method="POST" action="/orders">
-            <textarea  class="order-input"name="text" placeholder="What would you like to order?"></textarea>
-            <input id="order-button" type="submit" value="Place order">
-            <span id="timer" class="counter">20</span>
-            <p class="error"></p>
-          </form>
+            <div>
+          <h2>Personal info</h2>
+          <form action="/checkout">
+            Name: <input type="text" name="Name" ><br>
+            Phone: <input type="text" name="Phone"><br>
+            </form>
+          </div>
+
+          <input type="submit" value="Checkout">
 
       </section>
   </body>
