buttons and cart

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
     <img class="logo"
         src="https://www.mycutegraphics.com/graphics/cupcake/black-white-boy-with-cupcake.html">
     <span class="header">FoodNow</span>
-    <button id="nav-button" type="button">Order Now!
-        <p id="burger-emoji">🍔</p>
+    <button id="nav-button" type="button">Cart
+        <p id="burger-emoji">🛒</p>
     </button>
 </nav>
