--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,9 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
 
   <% include partials/nav %>
@@ -29,13 +32,7 @@
               <div class="menu-item-description">
                 DESCRIPTION OF ITEM
               </div>
-              <form method="post" action="">
-                <div>
-                  <label for="name">Quantity</label>
-                  <input type="text" name="Quantity" id="quantity" value="3">
-                </div>
-                </form>
-            </div>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button>
 
             <div class="menu-item">
               <div class="menu-item-name">
@@ -47,6 +44,7 @@
               <div class="menu-item-description">
                 DESCRIPTION OF ITEM
               </div>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
 
             <div class="menu-item">
@@ -59,6 +57,7 @@
               <div class="menu-item-description">
                 DESCRIPTION OF ITEM
               </div>
+              <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
 
             <div class="menu-item">
@@ -71,6 +70,7 @@
               <div class="menu-item-description">
                 DESCRIPTION OF ITEM
               </div>
+              <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
           </div>
           
@@ -84,6 +84,7 @@
               <div class="menu-item-price">
                 $10
               </div>
+              <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
             
 
@@ -94,6 +95,7 @@
               <div class="menu-item-price">
                 $10
               </div>
+               <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
             
 
@@ -105,9 +107,10 @@
               <div class="menu-item-price">
                 $10
               </div>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button>
+                </div>
             </div>
             
-
             
             <div class="menu-item">
               <div class="menu-item-name">
@@ -116,8 +119,8 @@
               <div class="menu-item-price">
                 $10
               </div>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
-          </div>
 
 
         </div>
@@ -134,6 +137,7 @@
               <div class="menu-item-description">
                 DESCRIPTION DESSERT 1 
               </div>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
             
 
@@ -147,6 +151,7 @@
               <div class="menu-item-description">
                 DESCRIPTION DESSERT 2 
               </div>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
 
 
@@ -160,6 +165,7 @@
               <div class="menu-item-description">
                 DESCRIPTION DESSERT 3 
               </div>
+              <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
     </section>
 
