--- a/views/neworder.ejs
+++ b/views/neworder.ejs
@@ -19,13 +19,13 @@
           <span class="header">FoodNow</span>
       
           <form id="main_pg_button" method="GET" action="/index">
-            <button id="nav-button" type="button">Home page!
+            <button id="nav-button" type="button">Home page
                 <p id="burger-emoji">🍔</p>
             </button>
           </form>
 
           <form id="send-tweets" method="POST" action="/checkout">
-              <button id="nav-button" type="button">Checkout!
+              <button id="nav-button" type="button">Checkout
                   <p id="burger-emoji">🍔</p>
               </button>
           </form>
@@ -39,32 +39,52 @@
           <div class="summary_container">
                   <h2>Summary</h2>
                   <form id="options" method="POST" action="/checkout">
-                    <span id="charNum" class="counter"> 1 x Option A $</span>
+                    <span id="charNum" class="counter"> 1 x Option A </span>
+                    <span id="charNum" class="counter">$ 140</span>
                     <input id="add-item" type="submit" value="+">
-                    <input id="remove-item" type="submit" value="-">
-                    <span id="charNum" class="counter"> 1 x Option A $</span>
+                    <input id="remove-item" type="submit" value="-"><br>
+                    <span id="charNum" class="counter"> 1 x Option A </span>
+                    <span id="charNum" class="counter">$ 140</span>
                     <input id="add-item" type="submit" value="+">
-                    <input id="remove-item" type="submit" value="-">
-                    <span id="charNum" class="counter"> 1 x Option A $</span>
+                    <input id="remove-item" type="submit" value="-"><br>
+                    <span id="charNum" class="counter"> 1 x Option A </span>
+                    <span id="charNum" class="counter">$ 140</span>
                     <input id="add-item" type="submit" value="+">
-                    <input id="remove-item" type="submit" value="-">
+                    <input id="remove-item" type="submit" value="-"><br>
+                  </form>
+
+
+                  <form id="totals" method="GET" action="/checkout">
+                    <span class="subtotal_text"> Subtotal</span>
+                    <span id="subtotal_amt" class="subtotal">$ 140</span><br>
+                    
+                    <span class="subtotal_text"> Tax </span>
+                    <span id="tax_amt" class="subtotal">$ 140</span><br>
+                    
+                    <span class="subtotal_text"> Total </span>
+                    <span id="total_amt" class="subtotal">$ 140</span>
+
+
+
                   </form>
             </div>
 
             <div>
           <h2>Personal info</h2>
           <form action="/checkout">
+            <table style="width:30%">
             <tr>
-              <td>Name: </td><input type="text" name="Name" ><br>
+              <td>Name: <input type="text" name="Name" ></td><br>
             </tr>
             <tr>
-              <td>Phone: </td><input type="text" name="Phone"><br>
+              <td>Phone: <input type="text" name="Phone"></td><br>
             </tr>
+          </table>
             </form>
+
           </div>
 
           <input type="submit" value="Checkout">
-
       </section>
   </body>
 </html>
