--- a/styles/neworder.scss
+++ b/styles/neworder.scss
@@ -1,53 +1,85 @@
-#nav-bar {
-        background-color: #464545;
-        color: #e8fdff;
-        height: 80px; 
-        padding-left: 2em; 
-        padding-right: 2em;
-        position: fixed;
-        top: 0; 
-        width: 100%;
-        z-index: 666;
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  margin: 0 -16px;
 }
 
-#nav-bar .logo {
-        width: 80px;
-        height: 80px;
-        float: left;
-        margin-right: 10px;
-        left: 10px; 
+.col-25 {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
 }
 
-#nav-bar .header {
-        line-height: 80px;
-        font-size: 200%;
-        font-weight: lighter;
-        right: 2em;
+.col-50 {
+  -ms-flex: 50%; /* IE10 */
+  flex: 50%;
 }
 
-#nav-button {
-        background-color: rgb(167, 150, 150);
-        border-radius: 5px; 
-        border: 2px solid rgb(244, 245, 244);
-        color: white;
-        font-weight: bold; 
-        float: right;
-        font-size: 20px;
-        margin-top: .5em;
-        margin-right: 2em;
-        padding: 15px 32px;
-        text-align: left;
-        text-decoration: none;
+.col-75 {
+  -ms-flex: 75%; /* IE10 */
+  flex: 75%;
 }
 
-#burger-emoji {
-        float: right; 
-        margin: 0; 
-        padding: 0 0 0 1rem; 
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
 }
 
-#nav-button:hover {
-        background-color: rgb(240, 215, 230);
-        color: grey;
-        border: 2px solid grey; 
+.container {
+  background-color: #f2f2f2;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+}
+
+input[type=text] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 24px;
+}
+
+.btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+span.price {
+  float: right;
+  color: grey;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+@media (max-width: 800px) {
+  .row {
+    flex-direction: column-reverse;
+  }
+  .col-25 {
+    margin-bottom: 20px;
+  }
 }
