--- a/views/neworder.ejs
+++ b/views/neworder.ejs
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-75">
           <div class="container">
-            <form action="/action_page.php">
+            <form action="/action_page.php" method="POST">
       
               <div class="row">
                 <div class="col-50">
