--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
     <section class="menu-container">    
         <div class="menu-body">
-          <div class="menu-section">
+          <div class="menu-section-main">
             <div class="menu-item">
                 <h2 class="menu-section-title">MAIN COURSE</h2>
               <div class="menu-item-name">
@@ -47,35 +47,9 @@
                 <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
 
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Dish 3
-              </div>
-              <div class="menu-item-price">
-                $100
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION OF ITEM
-              </div>
-              <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
-
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Dish 4 
-              </div>
-              <div class="menu-item-price">
-                $100
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION OF ITEM
-              </div>
-              <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
-          </div>
           
 
-          <div class="menu-section">
+          <div class="menu-section-drinks">
             <h2 class="menu-section-title">DRINKS</h2>
             <div class="menu-item">
               <div class="menu-item-name">
@@ -97,35 +71,11 @@
               </div>
                <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
-            
-
-            
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Drink 3 
-              </div>
-              <div class="menu-item-price">
-                $10
-              </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button>
-                </div>
-            </div>
-            
-            
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Drink 4 
-              </div>
-              <div class="menu-item-price">
-                $10
-              </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
-
+    
 
         </div>
         <div class="menu-body">
-          <div class="menu-section">
+          <div class="menu-section-dessert">
             <h2 class="menu-section-title">DESSERT</h2>
             <div class="menu-item">
               <div class="menu-item-name">
@@ -152,20 +102,6 @@
                 DESCRIPTION DESSERT 2 
               </div>
                 <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
-
-
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Dessert 3 
-              </div>
-              <div class="menu-item-price">
-                $20
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION DESSERT 3 
-              </div>
-              <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
     </section>
 
