--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav id="nav-bar">
     <img class="logo"
-        src="https://www.mycutegraphics.com/graphics/cupcake/black-white-boy-with-cupcake.html">
+        src="http://pluspng.com/img-png/bear-cute-png-clipart-baby-baby-cards-babyshower-baby-shower-oso-baby-boy-kit-digital-searching-teddy-bear-svg-file-1319.png">
     <span class="header">FoodNow</span>
     <button id="nav-button" type="button">Cart
         <p id="burger-emoji">🛒</p>
