main page correctly dsplaying DB items

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,12 +18,12 @@
   <% include partials/nav %>
   <body>
 
-    <section class="menu-container">    
+    <section class="menu-container">
         <div class="menu-body">
           <div class="menu-section-main">
             <div class="menu-item">
                 <h2 class="menu-section-title">MAIN COURSE</h2>
-              <div class="menu-item-name">
+              <!-- <div class="menu-item-name">
                 Dish 1
               </div>
               <div class="menu-item-price">
@@ -33,7 +33,7 @@
                 DESCRIPTION OF ITEM
               </div>
                 <button type="button" class="btn btn-outline-secondary">Add to order</button>
-
+              </div>
             <div class="menu-item">
               <div class="menu-item-name">
                 Dish 2
@@ -44,10 +44,10 @@
               <div class="menu-item-description">
                 DESCRIPTION OF ITEM
               </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button>
+                <button type="button" class="btn btn-outline-secondary">Add to order</button> -->
+            </div>
             </div>
 
-          
 
           <div class="menu-section-drinks">
             <h2 class="menu-section-title">DRINKS</h2>
@@ -60,7 +60,7 @@
               </div>
               <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
-            
+
 
             <div class="menu-item">
               <div class="menu-item-name">
@@ -71,7 +71,7 @@
               </div>
                <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
-    
+
 
         </div>
         <div class="menu-body">
@@ -79,17 +79,17 @@
             <h2 class="menu-section-title">DESSERT</h2>
             <div class="menu-item">
               <div class="menu-item-name">
-                Dessert 1 
+                Dessert 1
               </div>
               <div class="menu-item-price">
                 $20
               </div>
               <div class="menu-item-description">
-                DESCRIPTION DESSERT 1 
+                DESCRIPTION DESSERT 1
               </div>
                 <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
-            
+
 
             <div class="menu-item">
               <div class="menu-item-name">
@@ -99,7 +99,7 @@
                 $20
               </div>
               <div class="menu-item-description">
-                DESCRIPTION DESSERT 2 
+                DESCRIPTION DESSERT 2
               </div>
                 <button type="button" class="btn btn-outline-secondary">Add to order</button>
             </div>
