--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 
           <div class="menu-section-drinks">
             <h2 class="menu-section-title">DRINKS</h2>
-            <div class="menu-item">
+            <!-- <div class="menu-item">
               <div class="menu-item-name">
                 Drink 1
               </div>
@@ -59,10 +59,10 @@
                 $10
               </div>
               <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
+            </div> -->
 
 
-            <div class="menu-item">
+            <!-- <div class="menu-item">
               <div class="menu-item-name">
                 Drink 2
               </div>
@@ -70,14 +70,14 @@
                 $10
               </div>
                <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
+            </div> -->
 
 
         </div>
         <div class="menu-body">
           <div class="menu-section-dessert">
             <h2 class="menu-section-title">DESSERT</h2>
-            <div class="menu-item">
+            <!-- <div class="menu-item">
               <div class="menu-item-name">
                 Dessert 1
               </div>
@@ -102,7 +102,7 @@
                 DESCRIPTION DESSERT 2
               </div>
                 <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
+            </div> -->
     </section>
 
   </body>
