--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,8 +2,8 @@
     <img class="logo"
         src="http://pluspng.com/img-png/bear-cute-png-clipart-baby-baby-cards-babyshower-baby-shower-oso-baby-boy-kit-digital-searching-teddy-bear-svg-file-1319.png">
     <span class="header">FoodNow</span>
-    
-    <button id="nav-button" type="button">Cart <span id="count"></span>
+    <button id="nav-button" type="button" onclick="clearCart()">Clear Cart </button>
+    <button id="nav-button" type="button">Cart <span id="count">0</span>
         <p id="burger-emoji">🛒</p>
     </button>
 </nav>
