--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -14,87 +14,43 @@
 
   <body>
       <% include partials/nav %>
-        
-          <img class="logo"
-              src="https://www.mycutegraphics.com/graphics/cupcake/black-white-boy-with-cupcake.html">
-          <span class="header">FoodNow</span>
-      
-          <form id="main_pg_button" method="GET" action="/index">
-            <button id="nav-button" type="button">Home page
-                <p id="burger-emoji">🍔</p>
-            </button>
-          </form>
-
-          <form id="send-tweets" method="POST" action="/checkout">
-              <button id="nav-button" type="button">Checkout
-                  <p id="burger-emoji">🍔</p>
-              </button>
-          </form>
-      
+          
       <div class="row">
         <div class="col-75">
           <div class="container">
             <form action="/action_page" method="POST">
       
-              <div class="row">
-                <div class="col-50">
-                  <h3>Contact Infor</h3>
-                  <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-                  <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+                          <div class="col-25">
+                            <div class="container">
+                              <h4>Cart
+                                <span class="price" style="color:black">
+                                  <i class="fa fa-shopping-cart"></i>
+                                  <b>4</b>
+                                </span>
+                              </h4>
+                              <p><a class="item1">Product 1</a> <span class="price">$15</span></p>
+                              <p><a class="item2">Product 2</a> <span class="price">$5</span></p>
+                              <p><a class="item3">Product 3</a> <span class="price">$8</span></p>
+                              <p><a class="item4">Product 4</a> <span class="price">$2</span></p>
+                              <hr>
+                              <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+                            </div>
 
-                <div class="col-50">
-                  <h3>Payment</h3>
-                  <label for="fname">Accepted Cards</label>
-                  <div class="icon-container">
-                    <i class="fa fa-cc-visa" style="color:navy;"></i>
-                    <i class="fa fa-cc-amex" style="color:blue;"></i>
-                    <i class="fa fa-cc-mastercard" style="color:red;"></i>
-                    <i class="fa fa-cc-discover" style="color:orange;"></i>
-                  </div>
-                  <label for="cname">Name on Card</label>
-                  <input type="text" id="cname" name="cardname" placeholder="John More Doe">
-                  <label for="ccnum">Credit card number</label>
-                  <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-                  <label for="expmonth">Exp Month</label>
-                  <input type="text" id="expmonth" name="expmonth" placeholder="September">
-      
-                  <div class="row">
-                    <div class="col-50">
-                      <label for="expyear">Exp Year</label>
-                      <input type="text" id="expyear" name="expyear" placeholder="2018">
-                    </div>
-                    <div class="col-50">
-                      <label for="cvv">CVV</label>
-                      <input type="text" id="cvv" name="cvv" placeholder="352">
-                    </div>
-                  </div>
+                <div class="row">
+                  <div class="col-50">
+                    <h3>Contact Information</h3>
+                    <label for="fname"><i class="fa fa-user"></i> Full Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+                    <input type="text" id="pnumber" name="phonenumber" placeholder="Enter Phone Number">
+                    <input type="submit" value="Continue to checkout" class="btn">
                 </div>
       
               </div>
-              <label>
-                <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
-              </label>
-              <input type="submit" value="Continue to checkout" class="btn">
             </form>
           </div>
         </div>
-      
-        <div class="col-25">
-          <div class="container">
-            <h4>Cart
-              <span class="price" style="color:black">
-                <i class="fa fa-shopping-cart"></i>
-                <b>4</b>
-              </span>
-            </h4>
-            <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-            <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-            <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-            <p><a href="#">Product 4</a> <span class="price">$2</span></p>
-            <hr>
-            <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
-          </div>
         </div>
+      
       </div>
   </body>
 </html>
