--- a/public/styles/summary.css
+++ b/public/styles/summary.css
@@ -34,6 +34,10 @@
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  font-family: helvetica;
+  font-style: italic;
   margin-top: 5rem;
   background-color: #f2f2f2;
   padding: 5px 20px 15px 20px;
@@ -61,7 +65,7 @@ label {
 }
 
 .btn {
-  background-color: #4CAF50;
+  background-color: #a79696;
   color: white;
   padding: 12px;
   margin: 10px 0;
@@ -73,7 +77,7 @@ label {
 }
 
 .btn:hover {
-  background-color: #45a049;
+  background-color: #a79696;
 }
 
 span.price {
