--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -30,11 +30,11 @@
                                 </span>
                               </h4>
                               <p><a class="item1">Product 1</a> <span class="quantity">1</span> <span class="price">$15</span></p>
-                              <p><a class="item2">Product 2</a> <span class="price">$5</span></p>
-                              <p><a class="item3">Product 3</a> <span class="price">$8</span></p>
-                              <p><a class="item4">Product 4</a> <span class="price">$2</span></p>
+                              <p><a class="item1">Product 2</a> <span class="price">$5</span></p>
+                              <p><a class="item1">Product 3</a> <span class="price">$8</span></p>
+                              <p><a class="item1">Product 4</a> <span class="price">$2</span></p>
                               <hr>
-                              <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+                              <p>Total <span class="price1" style="color:black"><b>$30</b></span></p>
                             </div>
 
                 <div class="row">
