implemented summary.js with total, cart counter,  cart clear

--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -9,50 +9,47 @@
     <link rel="stylesheet" href="/styles/summary.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/summary.js"></script>
   </head>
 <script>
-  // console.log("This is localStorage summary: ", JSON.parse(localStorage.getItem('cart')))
-  const myObj = JSON.parse(localStorage.getItem('cart'));
-  function summaryCart(storage) {
 
-    const itemName = storage.name;
-    const itemPrice = storage.price;
-    const itemQty = storage.quantity;
+//   var total = 0;
+//   const myObj = JSON.parse(localStorage.getItem('cart'));
+//   function summaryCart(storage) {
 
-    console.log("item name", itemName)
-    console.log("item price", itemPrice)
-    console.log("item Qty", itemQty)
+//     const itemName = storage.name;
+//     const itemPrice = storage.price;
+//     const itemQty = storage.quantity;
 
-    $item = `<a class="item1">${itemName}</a> <span class="quantity">${itemQty}</span> <span class="price">$${itemPrice}</span>`
-    return $item
-  }
+//     console.log("item name", itemName)
+//     console.log("item price", itemPrice)
+//     console.log("item Qty", itemQty)
+
+//     $item = `<a class="item1">${itemName}</a> <span class="quantity">${itemQty}</span> <span class="price">$${itemPrice}</span>`
+//     total += itemPrice * itemQty;
+//     console.log("Total is: ",total);
+//     return $item
+//   }
 
 
-function renderSummary (cart) {
-  // console.log("this is cart", cart);
-  for (var item in cart) {
-    // console.log("this is item in cart", cart[item])
-    $('.container').append(summaryCart(cart[item]))
+// function renderSummary (cart) {
+//   for (var item in cart) {
+//     $('.container').append(summaryCart(cart[item]))
 
-  }
-}
+//   }
+// }
 
-$(document).ready(function () {
-  renderSummary(myObj);
-});
-  // const rendering = require('./summary.js')
-  // rendering(myObj);
+// function renderTotal (total) {
+//   $total = `<hr><p>Total <span class="price1" style="color:black"><b>${total}</b></span></p>`
+//   $('.container1').append($total)
 
-   // renderSummary(myObj);
+// }
 
-  // for (var item in myObj){
-  //   // console.log(myObj[item]);
-  //   // console.log("myObj[item]name",myObj[item]["name"])
-  //   // const lala = $('<a>').addClass('item1').text(myObj[item]["name"]);
-  //   // $('.row').append(lala);
-  //   summaryCart(item)
-  // }
+// $(document).ready(function () {
+//   renderSummary(myObj);
+//   renderTotal(total.toFixed(2));
+// });
+
 
 </script>
   <body>
@@ -72,7 +69,7 @@ $(document).ready(function () {
                                   <i class="fa fa-shopping-cart"></i>
                                 </span>
                               </h4>
-                              <a class="item1">Product 1</a> <span class="quantity">1</span> <span class="price">$15</span>
+                              <!-- <a class="item1">Product 1</a> <span class="quantity">1</span> <span class="price">$15</span>
                               <a class="item2">Product 2</a> <span class="price">$5</span>
                               <a class="item3">Product 3</a> <span class="price">$8</span>
                               <a class="item4">Product 4</a> <span class="price">$2</span>
@@ -80,10 +77,10 @@ $(document).ready(function () {
                               <p><a class="item1">Product 1</a> <span class="quantity">1</span> <span class="price">$15</span></p>
                               <p><a class="item1">Product 2</a> <span class="price">$5</span></p>
                               <p><a class="item1">Product 3</a> <span class="price">$8</span></p>
-                              <p><a class="item1">Product 4</a> <span class="price">$2</span></p>
-
+                              <p><a class="item1">Product 4</a> <span class="price">$2</span></p> -->
+<!--
                               <hr>
-                              <p>Total <span class="price1" style="color:black"><b>$30</b></span></p>
+                              <p>Total <span class="price1" style="color:black"><b>${total}</b></span></p> -->
                             </div>
                         </main>
 
