--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -51,7 +51,7 @@
 // });
 
 
-</script>
+</script>ouygouhgf
   <body>
       <% include partials/nav %>
 
@@ -88,10 +88,12 @@
                   <div class="col-50">
                     <h3>Contact Information</h3>
                     <label for="fname"><i class="user"></i> Full Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+                    <input type="text" id="fname" name="firstname" placeholder="Your cool name in here">
                     <label for="pnumber"><i class="phonenumber"></i> Phone Number</label>
-                    <input type="text" id="pnumber" name="phonenumber" placeholder="Enter Phone Number">
-                    <input type="submit" value="Continue to checkout" class="btn" onclick="location.href='/summary';">
+                    <input type="text" id="pnumber" name="phonenumber" placeholder="+12345678901">
+                    <input type="submit" value="Continue to checkout" class="btn" >
+                    <div class="error">Error Message</div>
+
                 </div>
 
               </div>
