--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav id="nav-bar">
     <img class="logo"
         src="http://pluspng.com/img-png/bear-cute-png-clipart-baby-baby-cards-babyshower-baby-shower-oso-baby-boy-kit-digital-searching-teddy-bear-svg-file-1319.png">
-    <span class="header">FoodNow</span>
+    <span class="header" onclick="location.href='/';">FoodNow</span>
     <button id="nav-button" type="button" onclick="clearCart()">Clear Cart </button>
     <button id="nav-button" type="button" onclick="location.href='/summary';">Cart <span id="count">0</span>
         <p id="burger-emoji">🛒</p>
