--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -23,7 +23,7 @@
   right: 2em; }
 
 #nav-button {
-  background-color: #a79696;
+  background-color: #f58d04;
   border-radius: 5px;
   border: 2px solid #f4f5f4;
   color: white;
