--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,7 @@
   </head>
 
   <% include partials/nav %>
-  <body>
-
+  <body background="images/background.jpg">
     <section class="menu-container">
         <div class="menu-body">
           <div class="menu-section-main">
