checks for name and phone number implemented

--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/styles/summary.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/summary.js"></script> 
-   
+    <script type="text/javascript" src="/scripts/summary.js"></script>
+
   </head>
   <body>
       <% include partials/nav %>
@@ -37,7 +37,7 @@
                     <label for="fname"><i class="user"></i> Full Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Your cool name in here">
                     <label for="pnumber"><i class="phonenumber"></i> Phone Number</label>
-                    <input type="text" id="pnumber" name="phonenumber" placeholder="+12345678901">
+                    <input type="text" id="pnumber" name="phonenumber" placeholder="1234567890">
                     <input type="submit" value="Continue to checkout" class="btn">
                     <div class="error">Error Message</div>
 
